<resources>
    <string name="app_name">QuickHire</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_post">Post</string>
    <string name="you_might_be_interested_in">You might be interested in</string>
    <string name="pay_rate_per_hour">Pay Rate Per Hour: %1$s</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="apply">APPLY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_page">Login Page</string>
    <string name="register_page">Register Page</string>
    <string name="role">Role</string>
    <string name="sign_up_as">Sign Up As</string>
    <string name="organization">Organization</string>
    <string name="employee">Employee</string>
    <string name="org_name">Organization Name</string>


    //Profile
    <string name="title_profile">Profile</string>
    <string-array name="time_prefer">
        <item>8.00 am - 10.00 am</item>
        <item>10.00 am - 12.00 pm</item>
        <item>12.00 pm - 2.00 pm</item>
        <item>2.00 pm - 4.00 pm</item>
        <item>4.00 pm - 6.00 pm</item>
        <item>6.00 pm - 8.00 pm</item>
    </string-array>

    //Profile Page
    <string name="title_inbox">Inbox</string>
    <string name="des_image">image</string>
    <string name="des_imageview">imageView</string>
    <string name="exp_about">A job seeker who are more patient for the work</string>
    <string name="exp_name">Alex</string>
    <string name="current_job_tab">Current Job</string>
    <string name="exp_job">1</string>
    <string name="stated_tag">Stated</string>
    <string name="exp_stated">Kuala Lumpur</string>
    <string name="time_prefered_tag">Time Preferred</string>
    <string name="exp_time">8.000 am - 10.00 am</string>
    <string name="contact_info_tag">Contact Info</string>
    <string name="email_tag">Email :</string>
    <string name="exp_email">ong@gmail.com</string>
    <string name="phone_tag">Phone :</string>
    <string name="exp_phone">017–6468809</string>
    <string name="educational_tag">Educational</string>
    <string name="exp_edu">Diploma</string>
    <string name="skill_tag">Skill</string>
    <string name="exp_skill">Engineer</string>
    <string name="log_out">Log Out</string>

    //Profile Page
    <!--    <string name="title_inbox">Inbox</string>-->
    <!--    <string name="des_image">image</string>-->
    <!--    <string name="des_imageview">imageView</string>-->
    <!--    <string name="exp_about">A job seeker who are more patient for the work</string>-->
    <!--    <string name="exp_name">Ong Shen Hoi</string>-->
    <!--    <string name="current_job_tab">Current Job</string>-->
    <!--    <string name="exp_job">Engineer</string>-->
    <!--    <string name="stated_tag">Stated</string>-->
    <!--    <string name="exp_stated">Kuala Lumpur</string>-->
    <!--    <string name="time_prefered_tag">Time Preferred</string>-->
    <!--    <string name="exp_time">8.000 am - 10.00 am</string>-->
    <!--    <string name="contact_info_tag">Contact Info</string>-->
    <!--    <string name="email_tag">Email :</string>-->
    <!--    <string name="exp_email">ong@gmail.com</string>-->
    <!--    <string name="phone_tag">Phone :</string>-->
    <!--    <string name="exp_phone">017–6468809</string>-->
    <!--    <string name="educational_tag">Educational</string>-->
    <!--    <string name="exp_edu">Diploma</string>-->
    <!--    <string name="skill_tag">Skill</string>-->
    <!--    <string name="exp_skill">Engineer</string>-->
    <!--    <string name="log_out">Log Out</string>-->

    //Edit Page
    <string name="change_photo">Change Photo</string>
    <string name="view_more"><u>View More User Detail -></u></string>
    <string name="view_more2"><u>View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail ->View More User Detail -></u></string>
    <string name="personal_detail">Personal Detail</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="secondname">Second Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="stated">Stated</string>
    <string name="current_job">Current Job</string>
    <string name="time_prefer">Time Prefer</string>
    <string name="education">Education</string>
    <string name="skill">Skill</string>
    <string name="personal_description">Personal Description</string>
    <string name="company_description">Company Description</string>
    <string name="something_about_yourself">Something about yourself</string>
    <string name="something_about_company">Something about company</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    //Notification
    <string name="welcome_title">Welcome to Quick Hire</string>
    <string name="welcome_des">Welcome to our application Quick Hire. You can enjoy all the feature inside to find a new job or find a new partner in your job enviroonment</string>

    //search and post
    <string name="upload_image">Upload Image</string>
    <string name="job_name">Job Name:</string>
    <string name="job_specialist">Job Specialist:</string>
    <string name="job_des">Job Description:</string>
    <string name="job_payrate">Job Pay Rate Per Hour:</string>
    <string name="areacity">Area/City:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_job_listings">Your Job Listings</string>
    <string name="company_detail">Company Detail</string>
    <string name="job_provided">Job Provided</string>
    <string name="address">Address</string>
    <string name="job_provided_tag">Number Job Provided</string>
    <string name="address_tag">Address</string>
    <string name="reject">Reject</string>
    <string name="Congrate">Congratulations, you are hired</string>
    <string name="Congrate_detail">Congratulations. Based on your previous job request, we think you are the perfect candidate for this job. We urge you to contact us as soon as possible to ensure that this job still exists.</string>
    <string name="rejected">You have been rejected.</string>
    <string name="reject_detail">Feel sorry. It is a pity that we cannot hire you because your qualifications do not meet our expectations. I hope you can find the job you want as soon as possible.</string>
    <string name="request_job">A new job hire request from job seeker is sent to you. Please do the response as fast as possible.</string>
    <string name="request_job_title">New job hire request</string>
    <string name="backButton">backButton</string>
    <string name="job_image">Job Image:</string>
    <string name="delete_job">Detele Job</string>
    <string name="edit_the_job">Edit the Job</string>
    <string name="this_is_my_image_button">This is my image button</string>
    <string name="job_pay_rate">Job Pay Rate</string>
    <string name="edit_job">Edit Job</string>

    <string-array name="areaoptions">
        <item></item>
        <item>Alor Setar</item>
        <item>Batu Gajah</item>
        <item>Batu Pahat</item>
        <item>Bentong</item>
        <item>Bintulu</item>
        <item>George Town</item>
        <item>Ipoh</item>
        <item>Iskandar Puteri</item>
        <item>Johor Bahru</item>
        <item>Kangar</item>
        <item>Klang</item>
        <item>Kota Bharu</item>
        <item>Kota Kinabalu</item>
        <item>Kota Samarahan</item>
        <item>Kuala Dungun</item>
        <item>Kuala Kangsar</item>
        <item>Kuala Lumpur</item>
        <item>Kuala Selangor</item>
        <item>Kuala Terengganu</item>
        <item>Kuantan</item>
        <item>Kulai</item>
        <item>Kuching</item>
        <item>Lahad Datu</item>
        <item>Manjung</item>
        <item>Miri</item>
        <item>Muar</item>
        <item>Pengerang</item>
        <item>Petaling Jaya</item>
        <item>Putrajaya</item>
        <item>Raub District</item>
        <item>Sandakan</item>
        <item>Sarikei</item>
        <item>Segamat District</item>
        <item>Seremban</item>
        <item>Shah Alam</item>
        <item>Sibu</item>
        <item>Sungai Petani</item>
        <item>Taiping</item>
        <item>Temerloh</item>
        <item>Teluk Intan</item>
        <item>Tumpat</item>
        <item>Tawau</item>
    </string-array>

    <string-array name="joboptions">
        <item></item>
        <item>Software Engineer</item>
        <item>Data Scientist</item>
        <item>Marketing Manager</item>
        <item>Graphic Designer</item>
        <item>Human Resources Specialist</item>
        <item>Financial Analyst</item>
        <item>Web Developer</item>
        <item>Product Manager</item>
        <item>Operations Manager</item>
        <item>Sales Representative</item>
        <item>Customer Service Representative</item>
        <item>IT Support Specialist</item>
        <item>Content Writer</item>
        <item>Business Analyst</item>
        <item>Project Manager</item>
    </string-array>
    <string name="title_activity_organisation_main">OrganisationMainActivity</string>
</resources>