<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.notifications.organization.UserDetailFragment">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:background="#0000FFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_arrow_back_24" />

    <LinearLayout
        android:id="@+id/layoutPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="150dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="150dp"
            >

            <ImageView
                android:id="@+id/profileImage"
                android:scaleType="fitCenter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/images"
                android:contentDescription="@string/des_imageview" />


        </androidx.cardview.widget.CardView>



    </LinearLayout>



    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPhoto"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/exp_name"
        android:textColor="@color/lavender"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/statedTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/name"
        android:text="@string/stated_tag"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/stated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/statedTag"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exp_stated"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TimePreferTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stated"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:text="@string/time_prefered_tag"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TimePrefer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TimePreferTag"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exp_time"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/EmailTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TimePrefer"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:text="Email"
        android:textStyle="bold"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/EmailTag"
        android:text="@string/exp_email"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:layout_marginStart="150dp"/>

    <TextView
        android:id="@+id/ContactNumberTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Email"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="Phone"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ContactNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ContactNumberTag"
        android:layout_centerInParent="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exp_phone"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/educationalTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ContactNumber"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:text="@string/educational_tag"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/educational"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/educationalTag"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exp_edu"
        android:textColor="@color/lavender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/skillTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/educational"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:text="@string/skill_tag"
        android:textColor="@color/lavender"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/skillTag"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exp_skill"
        android:textColor="@color/lavender"
        android:textSize="16sp" />


</RelativeLayout>
